--- a/src/static/less/grid.less
+++ b/src/static/less/grid.less
@@ -53,6 +53,8 @@
 
 @media @tabletWidth{
     .contentwrapper {
+		max-width: 670px;
+		margin: 0 auto;
 		.flex-direction(column);
 
 	    .maincolumn {
