--- a/src/static/less/header.less
+++ b/src/static/less/header.less
@@ -1,7 +1,9 @@
 /* --header */
 
 	.header {
+		overflow: hidden;
 		.vertical-gradient(@orange, 0%, @orangeLight, 100%);
+		
 		.headerinner {
 			position:relative;
 			z-index:2;
